@@ -1,7 +1,11 @@
-SUBDIRS = clock launcher startup systray showdesktop windowselector
+SUBDIRS = clock launcher systray showdesktop windowselector
 
 if HAVE_LIBAPM
   SUBDIRS += battery
+endif
+
+if HAVE_LIBSN
+  SUBDIRS += startup
 endif
 
 MAINTAINERCLEANFILES = Makefile.in
